Revert "fixes overflowing div width on user activity page"
This reverts commit 375153ce572dd3301bd236ad53ed9353c4915986.

--- a/app/assets/stylesheets/desktop/user.scss
+++ b/app/assets/stylesheets/desktop/user.scss
@@ -143,6 +143,7 @@
    }
 
   .user-right {
+    width: 900px;
     display: table-cell;
   }
 
